# cppsl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.mk
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  version_regression.md
.github/workflows/: build_cmake.yml  cmake-multi-platform.yml  pr_agent.yml
cmake/: CompilerOptions.cmake  Platform.cmake  Version.cmake
cmake/linux/: clang-12.cmake  clang.cmake  gcc-11.cmake  gcc.cmake  toolchain.cmake
cmake/linux-arm/: arm-linux-gnueabihf-clang-12.cmake  arm-linux-gnueabihf-clang.cmake  arm-linux-gnueabihf-gcc-10.cmake  arm-linux-gnueabihf-gcc.cmake  armv7.cmake  cortexa7.cmake  toolchain.cmake
doc/: CMakeLists.txt
examples/: CMakeLists.txt
examples/buffer/: CMakeLists.txt  main.cpp
examples/byteSwap/: CMakeLists.txt  main.cpp
examples/byteswap/: CMakeLists.txt
examples/console_menu/: CMakeLists.txt  main.cpp
examples/cyclicBuffer/: CMakeLists.txt  main.cpp
examples/example_byteswap/: CMakeLists.txt  main.cpp
examples/example_use_lib/: CMakeLists.txt  main.cpp
examples/example_use_lib_header_only/: CMakeLists.txt  main.cpp
examples/jthread/: CMakeLists.txt  main.cpp
examples/jthreads_with_cyclicBuffer/: CMakeLists.txt  main.cpp
examples/modcpp_ch02_string/: CMakeLists.txt  main.cpp
examples/mthreads/: CMakeLists.txt  main.cpp
examples/ringBuffer/: CMakeLists.txt  main.cpp
examples/thread_cancellation/: main.cpp
examples/thread_wrap/: CMakeLists.txt  demoConveyorThread.h  demoThread.h  main.cpp
examples/thread_wrapper/: InterlockedProperty.h  ThreadWrapper.h  ThreadWrapperDemo.h
include/cppsl/: byteSwap.hpp  cppsl.h  cppsl_header_only.h  enumBitmask.hpp  enum_bitmask.h  opt_results.h  result.hpp  results.hpp
include/cppsl/buffer/: cyclebuffer.hpp  cyclicBuffer.hpp  cyclicBufferLockFree.hpp  cyclicBufferSafe.hpp  ringBuffer.hpp  ringBuffer.tcc  ring_buffer.hpp  ring_buffer.tcc
include/cppsl/console/: menu.h  menu.hpp  menuDriver.hpp  menu_driver.h
include/cppsl/container/: circularBuffer.hpp  dequeSafe.hpp  deque_threadsafe.h  deque_tsafe.hpp  listSafe.hpp  list_threadsafe.h  list_tsafe.hh  queueLockFree.hpp  queueSafe.hpp  queue_lockfree.h  queue_none_lock.hpp  queue_threadsafe.h  queue_tsafe.hpp
include/cppsl/file/: baseAppender.hpp  fileBaseAppender.hpp  fileRollAppender.hpp  file_appender_base.h  file_appender_roll.h  rollAppender.hpp
include/cppsl/log/: anylog.h  anylog.hpp  appender.h  baseLogAppender.hpp  baseWithLogAppender.hpp  log4c.h  logAppender.hpp  sink_appender.h  some_withlog.h  wrappers.h
include/cppsl/log/details/: fallback_sink.h  fallback_sink.hpp  rsyslog_sink.h  rsyslog_sink.hpp
include/cppsl/math/: constants.hpp  functions.hpp  samplRateConvFIR.hpp  samplRateConvLagrange.hpp  samplRateConvLinear.hpp
include/cppsl/sys/: byteswap.h  byteswap.hpp  endian.h
include/cppsl/threading/: concurrency.hpp  delegate.h  delegate.hpp  delegateBase.hpp  delegate_base.h  interlock_property.h  interlockedProperty.hpp  jthread.h  lockFreeQueue.hpp  scoped_thread.h  threadConveyor.hh  threadSafeDequeT.hh  threadSafeListT.hh  threadSafeQueueT.hh  threadWorker.hpp  threadWrapper.hpp  thread_conveyor.h  thread_realtime.h  thread_synchro.h  thread_worker.h
include/cppsl/threads/: threadWorker.hpp
include/cppsl/time/: functions.hpp  stopTimer.hpp  timer_interval.h  watch.hpp
src/: CMakeLists.txt
src/app_lib/: CMakeLists.txt  main.cpp
src/app_lib_header_only/: CMakeLists.txt  main.cpp
src/buffer/: ring_buffer.cpp
src/cppsl/: CMakeLists.txt
src/cppsl/src/: cppsl.cpp
src/cppsl/src/file/: baseAppender.cpp  file_appender_base.cpp  file_appender_roll.cpp  rollAppender.cpp
src/cppsl/src/log/: appender.cpp  log4c.cpp  sink_appender.cpp  wrappers.cpp
src/cppsl/src/threading/: concurrency.cpp  pthreadBase.cpp  thread_realtime.cpp  thread_worker.cpp
src/cppsl_header_only/: CMakeLists.txt
src/file/: fileBaseAppender.cpp  fileRollAppender.cpp
src/log/: logAppender.cpp
src/threads/: threadWorker.cpp
src/your_app_lib/: CMakeLists.txt
src/your_app_lib_header_only/: CMakeLists.txt  main.cpp
src/your_lib/: CMakeLists.txt
src/your_lib/include/your_lib/: your_lib.h
src/your_lib/src/: your_lib.cpp
src/your_lib_header_only/: CMakeLists.txt
src/your_lib_header_only/include/your_lib_header_only/: your_lib_header_only.h
submodules/: CMakeLists.txt
test/: CMakeLists.txt
test/lib/docs/: advanced.md  primer.md
test/test_buffer/: CMakeLists.txt  README.md  main.cpp
test/test_byteSwap/: CMakeLists.txt  main.cpp
test/test_container/: CMakeLists.txt  main.cpp
test/test_cppsl/: CMakeLists.txt  check_sum_and_diff.cpp
test/test_cppsl_header_only/: CMakeLists.txt  check_sum_and_diff.cpp
test/test_doctest/: CMakeLists.txt  main.cpp
test/test_enumBitMask/: CMakeLists.txt  main.cpp
test/test_fft/: CMakeLists.txt
test/test_fileAppender/: CMakeLists.txt  main.cpp
test/test_results/: CMakeLists.txt  main.cpp
test/test_strings/: CMakeLists.txt  main.cpp
test/test_thread_wakeup/: CMakeLists.txt  main.cpp
test/test_timers/: CMakeLists.txt  main.cpp
test/test_your_lib/: CMakeLists.txt  check_sum_and_diff.cpp
test/test_your_lib_header_only/: CMakeLists.txt  check_sum_and_diff.cpp
